reports/optimization_basics.log
Traceback (most recent call last):
  File "C:\ProgramData\Anaconda3\envs\JB-env\lib\site-packages\jupyter_cache\executors\utils.py", line 56, in single_nb_execution
    record_timing=False,
  File "C:\ProgramData\Anaconda3\envs\JB-env\lib\site-packages\nbclient\client.py", line 1085, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "C:\ProgramData\Anaconda3\envs\JB-env\lib\site-packages\nbclient\util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "C:\ProgramData\Anaconda3\envs\JB-env\lib\site-packages\nbclient\util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "C:\ProgramData\Anaconda3\envs\JB-env\lib\asyncio\base_events.py", line 587, in run_until_complete
    return future.result()
  File "C:\ProgramData\Anaconda3\envs\JB-env\lib\site-packages\nbclient\client.py", line 552, in async_execute
    cell, index, execution_count=self.code_cells_executed + 1
  File "C:\ProgramData\Anaconda3\envs\JB-env\lib\site-packages\nbclient\client.py", line 846, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "C:\ProgramData\Anaconda3\envs\JB-env\lib\site-packages\nbclient\client.py", line 748, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
from scipy import optimize

def f(X):
  """
  Cost function.
  """  
  return (X**2).sum()

X0 = [1.,1.] # Initial guess
sol = optimize.minimize(f, X0, method = "nelder-mead")
X = sol.x
print "Solution: ", X

------------------

[1;36m  File [1;32m"C:\Temp\ipykernel_60276\1696389007.py"[1;36m, line [1;32m12[0m
[1;33m    print "Solution: ", X[0m
[1;37m                     ^[0m
[1;31mSyntaxError[0m[1;31m:[0m Missing parentheses in call to 'print'. Did you mean print("Solution: ", X)?

SyntaxError: Missing parentheses in call to 'print'. Did you mean print("Solution: ", X)? (1696389007.py, line 12)

